refacto pom.xml